--- a/messages/en/turboPage.json
+++ b/messages/en/turboPage.json
@@ -738,8 +738,8 @@
       },
       "OnlineTravel": {
         "EnhancedServices": {
-          "Title": "Key Benefits",
-          "Subtitle": "",
+          "Title": "Key",
+          "Subtitle": "Benefits",
           "sections": [
             {
               "id": "turbochargedEfficiency",
